cmake_minimum_required(VERSION 3.3)
project(zsr-utils)
set(VERSION 0.1)
set(CMAKE_CXX_FLAGS "-std=gnu++14 -Wall -Og -g")
include_directories(".")
add_library(util util.cpp)
target_link_libraries(util magic)
add_library(zsr zsr.cpp compress.cpp)
target_link_libraries(zsr util lzma pthread)
add_executable(index index.cpp)
target_link_libraries(index xapian util)
add_executable(zsrutil zsrutil.cpp)
target_link_libraries(zsrutil zsr)
add_executable(mkvol mkvol.cpp)
target_link_libraries(mkvol zsr)
add_executable(zsrsrv zsrsrv.cpp http.cpp Volume.cpp)
target_link_libraries(zsrsrv util zsr mongoose xapian pthread)
#add_executable(t test.cpp)
#target_link_libraries(t util zsr)

