cmake_minimum_required(VERSION 3.3)
project(zsr-utils)
set(VERSION 0.1)
set(CMAKE_CXX_FLAGS "-std=gnu++14 -Wall -Og -g")
include_directories(".")
add_library(util util.cpp)
target_link_libraries(util magic)
add_library(zsr zsr.cpp compress.cpp)
target_link_libraries(zsr util lzma pthread)
add_executable(zsrutil zsrutil.cpp)
target_link_libraries(zsrutil zsr)
add_executable(zsrmnt zsrmnt.cpp)
target_link_libraries(zsrmnt zsr fuse)
add_executable(mkvol mkvol.cpp search.cpp)
target_link_libraries(mkvol zsr)
add_executable(zsrsrv zsrsrv.cpp search.cpp http.cpp Volume.cpp)
target_link_libraries(zsrsrv util zsr mongoose pthread)
#add_executable(t test.cpp)
#target_link_libraries(t util zsr)

