[package]
name = "mkvol"
version = "0.1.0"
authors = ["Matthew Schauer <matthew.schauer@e10x.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "2.33"
disktree = { path = "../disktree" }
encoding = "0.2"
html-escape = "0.2"
lazy_static = "1.4"
magic = "0.12"
mime_guess = "2.0"
mlua = { version = "0.4", features = ["lua54", "send", "vendored"] }
regex = "1.3"
std-semaphore = "0.1"
squashfs = { path = "../../squashfs-rs" }
threadpool = "1.8"
