[package]
name = "sqsrv"
version = "0.4.0"
authors = ["Matthew Schauer <matthew.schauer@e10x.net>"]
edition = "2018"

[dependencies]
bytesize = "1.0"
disktree = { path = "../disktree" }
itertools = "0.9"
libc = "0.2"
liquid = "0.21"
owning_ref = "0.4"
rand = "0.7"
regex = "1.3"
rocket = { version = "0.4", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
squashfs = { path = "../../squashfs-rs" }
strsim = "0.10"
thiserror = "1.0"
walkdir = "2.3"
